--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         }
 
         .wide-text {
-            --wide-text-size: 200px
+            --wide-text-size: 200px;
             font-size: var(--wide-text-size);
         }
 
-        .text-container {
+        .text-padding {
+            --text-padding: 10px;
             padding: var(--text-padding);
         }
     </style>
